pkl-core/src/test/files/LanguageSnippetTests/input/errors/delimiters/missingMapDelimiter.pkl
map = Map("one", 1, "two", 2

